--- a/Front-end-cloning/spotify-clone/styles.css
+++ b/Front-end-cloning/spotify-clone/styles.css
@@ -109,10 +109,129 @@ nav>article>.menu>ol>li>.highlight:hover{
 }
 
 #home>article>.text>button:hover{
-    background-color: rgb(173, 255, 47);
-    border: 1px solid rgb(173, 255, 47);
-    transition: all 0.5s ease-in;
+    background-color: black;
+    border: 1px solid black;
+    color: white;
+    transition: all 0.2s ease-in;
 }
 
+#about{
+    height: 600px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+#about>.features>ol{
+    display: flex;
+    list-style-type: none;
+    justify-content: space-evenly;
+    align-items: center;
+
+}
+
+#about>.features>ol>li>img{
+    height: 142px;
+    width: 142px;
+    margin-bottom: 5px;
+    margin-left: 60px;
+}
+
+#about>.features>ol>li>.heading{
+    height: 27px;
+    width: 285px;
+    display: flex;
+    justify-content: center;
+    font-size: 21px;
+    font-weight: 600;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
+
+#about>.features>ol>li>.data{
+    height: 72px;
+    width: 285px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    margin-top: 5px;
+    font-size: 16px;
+    line-height: 1.5;
+    margin: 0 10px 0 10px;
+}
+
+#about>h2{
+    width: 676px;
+    height: 46px;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 900;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#free{
+    height: 500px;
+    width: 100%;
+    background: linear-gradient(rgb(168, 24, 168),rgb(102, 102, 249));
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+}
+
+#free>p{
+    font-size: 45px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    font-weight: 600;
+}
+
+#questions{
+    height: 595px;
+    width: 100%;
+}
+
+#ready{
+    height: 450px;
+    width: 100%;
+    background-color: aqua;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background: url(assets/bubbles-dktp.svg) left -10px bottom -160px / 100% 1114px no-repeat, linear-gradient(-45deg, rgb(108, 14, 224) 16%, rgb(240, 55, 166)) rgb(108, 14, 224);
+}
+
+#ready>h1{
+    font-size: 70px;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 900;
+    margin-bottom: 30px;
+    margin-top: 100px;
+}
+
+#ready>.btn{
+    
+    height: 50px;
+    width: 180px;
+    background-color: white;
+    color: black;
+    border: 1px solid white;
+    border-radius: 30px;
+    margin: 0 5px 150px 10px;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+#ready>.btn:hover{
+    background-color: black;
+    border: 1px solid black;
+    color: white;
+    transition: all 0.2s ease-in;
+}
 
 
